# extensions-Renderer2

./: CMakeLists.txt  README.txt
Display2/: Canvas2D.h  Canvas3D.h  ColorStereoCanvas.h  CompositeCanvas.cpp  CompositeCanvas.h  FadeCanvas.cpp  FadeCanvas.h  ICanvas.h  SplitStereoCanvas.h  StereoCamera.h  StereoCanvas.h
Renderers2/: IRenderer.h
Renderers2/OpenGL/: CanvasVisitor.cpp  CanvasVisitor.h  GLContext.cpp  GLContext.h  GLRenderer.cpp  GLRenderer.h  LightVisitor.cpp  LightVisitor.h  RenderingView.cpp  RenderingView.h  ShadowMap.cpp  ShadowMap.h
Resources2/: PhongShader.cpp  PhongShader.h  Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h
Resources2/OpenGL/: FXAAShader.cpp  FXAAShader.h
Utils/: Box.h
shaders/: PhongShader.glsl  PhongShader.glsl.frag  PhongShaderESCompatible.glsl  PhongShaderESCompatible.glsl.frag  PhongShaderESCompatible.glsl.vert  QuadShader.glsl  QuadShader.glsl.frag  QuadShader.glsl.vert  TinyFxaa.glsl  pp.vert  shadowmap.frag  shadowmap.glsl
